# chimera-core

./: Dockerfile  Makefile  main.py  pyproject.toml
.cursor/rules/: agent.mdc
.github/workflows/: main.yml
docs/: hierarchical-agent-swarm.md  hierarchical-agent-swarm.mmd
research/: architecture_strategy.md
skills/: interfaces.py
specs/: _meta.md
tests/: test_skills.py
